feat: notify host on room join via ROOM_JOIN notification
- RoomService: inject NotificationService
- joinRoom(): 방장에게 ROOM_JOIN 알림 (자기 자신 입장 시 제외)
- RoomServiceTest: notification mock 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>